--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,26 @@
-# Compiled class file
-*.class
+import java.util.Scanner;
 
-# Log file
-*.log
+public class ATM {
+    private double balance;
+    public ATM(double initialBalance) { this.balance = initialBalance; }
+    public void checkBalance() { System.out.println("Balance: $" + balance); }
+    public void deposit(double amount) { balance += amount > 0 ? amount : 0; System.out.println(amount > 0 ? "$" + amount + " deposited." : "Invalid amount."); }
+    public void withdraw(double amount) { System.out.println(amount > 0 && amount <= balance ? "$" + (balance -= amount) + " withdrawn." : "Invalid or insufficient funds."); }
+    
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        ATM atm = new ATM(1000);
+        while (true) {
+            System.out.println("\n1. Check Balance\n2. Deposit\n3. Withdraw\n4. Exit");
+            System.out.print("Choose: ");
+            switch (scanner.nextInt()) {
+                case 1 -> atm.checkBalance();
+                case 2 -> { System.out.print("Enter deposit: "); atm.deposit(scanner.nextDouble()); }
+                case 3 -> { System.out.print("Enter withdrawal: "); atm.withdraw(scanner.nextDouble()); }
+                case 4 -> { System.out.println("Thank you! Goodbye!"); scanner.close(); System.exit(0); }
+                default -> System.out.println("Invalid option.");
+            }
+        }
+    }
+}
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
